# pg_client

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MOTIVATION.md  README.md  cloudbuild.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/pg-client/: Cargo.toml
crates/pg-client/src/: cancel.rs  config.rs  connection.rs  error.rs  lib.rs  notification.rs  tracing_ext.rs
crates/pg-client/src/auth/: cleartext.rs  md5.rs  mod.rs  scram.rs
crates/pg-client/src/copy/: binary.rs  mod.rs
crates/pg-client/src/error/: mod.rs  retry.rs  server.rs  sqlstate.rs
crates/pg-client/src/pool/: config.rs  core.rs  error.rs  guard.rs  mod.rs  pool.rs  status.rs  sync.rs
crates/pg-client/src/protocol/: backend.rs  buffer.rs  error.rs  frontend.rs  mod.rs  types.rs
crates/pg-client/src/query/: cache.rs  cursor.rs  mod.rs  params.rs  pipeline.rs  prepared.rs  result.rs  row.rs  stream.rs
crates/pg-client/src/reconnect/: classify.rs  config.rs  env.rs  mod.rs  retry.rs  session.rs
crates/pg-client/src/transaction/: mod.rs  options.rs  savepoint.rs
crates/pg-client/src/transport/: buffered.rs  error.rs  mod.rs  native.rs  params.rs  raw_wasi.rs  tcp.rs  tls.rs  tokio_tcp.rs
crates/pg-client/src/types/: decode.rs  encode.rs  extern_types.rs  mod.rs  oid.rs  tests.rs  types.rs
crates/pg-client/tests/: e2e_pool.rs  e2e_tls.rs  integration.rs
crates/pg-pool/: Cargo.toml
crates/pg-pool/src/: config.rs  error.rs  guard.rs  lib.rs  pool.rs  status.rs  sync.rs
crates/pg-pool/tests/: e2e_pool.rs
crates/pg-protocol/: Cargo.toml
crates/pg-protocol/src/: backend.rs  buffer.rs  error.rs  frontend.rs  lib.rs  types.rs
crates/pg-types/: Cargo.toml
crates/pg-types/src/: decode.rs  encode.rs  extern_types.rs  lib.rs  oid.rs  tests.rs  types.rs
examples/e2e-test/: Cargo.toml
examples/e2e-test/src/: main.rs
examples/smoke-test/: Cargo.toml
examples/smoke-test/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_message.rs  decode_message_bounded.rs  decode_message_persistent.rs  decode_pg_types.rs
plan/: CHANGELOG.md  PLAN.md  PREREQUISITES.md  step-01-project-setup.md  step-02-tcp-transport.md  step-03-tls-support.md  step-04-wire-protocol.md  step-05-authentication.md  step-06-connection.md  step-07-simple-query.md  step-08-extended-query.md  step-09-type-system.md  step-10-transactions.md  step-11-copy-protocol.md  step-12-listen-notify-cancel.md  step-13-error-handling.md  step-14-streaming-api.md  step-15-connection-pooling.md  step-16-reconnection.md  step-17-logging-tracing.md  step-18-testing-strategy.md  step-19-api-design.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/src/common/: mod.rs
tests/integration/src/pool_safety/: mod.rs
tests/integration/src/protocol/: mod.rs
tests/integration/src/reconnect/: mod.rs
tests/integration/src/streaming/: mod.rs
tests/integration/src/tracing/: mod.rs
