[package]
name = "wasi-pg-client-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pg-protocol = { path = "../crates/pg-protocol" }
pg-types = { path = "../crates/pg-types" }

[[bin]]
name = "decode_message"
path = "fuzz_targets/decode_message.rs"

[[bin]]
name = "decode_message_persistent"
path = "fuzz_targets/decode_message_persistent.rs"
