[package]
name = "wasi-pg-client-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasi-pg-client = { path = "../crates/pg-client" }

[[bin]]
name = "decode_message"
path = "fuzz_targets/decode_message.rs"

[[bin]]
name = "decode_message_persistent"
path = "fuzz_targets/decode_message_persistent.rs"

[[bin]]
name = "decode_message_bounded"
path = "fuzz_targets/decode_message_bounded.rs"

[[bin]]
name = "decode_pg_types"
path = "fuzz_targets/decode_pg_types.rs"
