[package]
name = "wasi-pg-client"
description = "PostgreSQL client library for WASI Preview 2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["postgresql", "wasi", "wasip2", "database", "sql"]
categories = ["database", "wasm"]

[dependencies]
pg-protocol = { path = "../pg-protocol" }
pg-types = { path = "../pg-types" }
wstd = { workspace = true }
wasip2 = "1.0"
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
futures-concurrency = { workspace = true }

# Crypto for auth
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }
md-5 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# TLS
rustls = { workspace = true, optional = true }
rustls-rustcrypto = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

# Random - use workspace version (0.4) which auto-detects WASI P2
getrandom = { workspace = true }

# Fallible iterator (used by postgres-protocol error/field parsing)
fallible-iterator = { workspace = true }

# Optional type integrations
uuid = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
url = "2.5.8"

# Tokio for native async TCP transport
tokio = { workspace = true, optional = true, features = ["net", "time", "io-util"] }

[features]
default = ["tls", "scram", "tracing"]
tls = ["dep:rustls", "dep:rustls-rustcrypto", "dep:rustls-pemfile", "dep:webpki-roots"]
scram = ["dep:sha2", "dep:hmac", "dep:pbkdf2", "dep:base64"]
md5-auth = ["dep:md-5"]
tracing = ["dep:tracing"]

uuid = ["pg-types/uuid", "dep:uuid"]
serde-json = ["pg-types/serde-json", "dep:serde_json"]
chrono = ["pg-types/chrono", "dep:chrono"]
test-native = []  # Enable native (blocking) transport for non-WASI testing
tokio-transport = ["dep:tokio"]  # Enable async tokio TCP transport for native production builds
pool = []  # Connection pooling support marker (use wasi-pg-pool crate directly for Pool, PoolConfig, etc.)

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
testcontainers = "0.27"
tokio = { workspace = true }
