[package]
name = "wasi-pg-pool"
description = "Connection pooling for wasi-pg-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasi-pg-client = { path = "../pg-client" }
pg-protocol = { path = "../pg-protocol" }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
async-channel = { workspace = true }
wstd = { workspace = true }
futures-concurrency = { workspace = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "wasi-pg-client/tracing"]
