[package]
name = "wasi-pg-pool"
description = "Connection pooling for wasi-pg-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasi-pg-client = { path = "../pg-client" }
pg-protocol = { path = "../pg-protocol" }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
wstd = { workspace = true }
futures-concurrency = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
testcontainers = "0.27"
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "wasi-pg-client/tracing"]
