[package]
name = "pg-types"
description = "PostgreSQL type system: ToSql/FromSql, OID mapping, encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["postgresql", "types", "tosql", "fromsql"]
categories = ["database"]

[dependencies]
postgres-types = ">=0.2.8, <0.3"
postgres-protocol = "0.6"
bytes = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
uuid = ["dep:uuid", "postgres-types/with-uuid-1"]
serde-json = ["dep:serde_json", "postgres-types/with-serde_json-1"]
chrono = ["dep:chrono", "postgres-types/with-chrono-0_4"]
